[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chromatindb"
version = "0.1.0"
description = "Python SDK for chromatindb — PQ-secure decentralized database"
requires-python = ">=3.10"
dependencies = [
    "liboqs-python~=0.14.0",
    "pynacl~=1.5.0",
    "flatbuffers~=25.12",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["chromatindb*"]

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = ["chromatindb/generated/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["chromatindb/generated/"]

[[tool.mypy.overrides]]
module = ["oqs", "oqs.*", "flatbuffers", "flatbuffers.*", "nacl", "nacl.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["chromatindb.generated.*"]
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires live relay (192.168.1.200:4201)",
]
